--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.79.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
