--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/drawer": "^7.5.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
+    "@reduxjs/toolkit": "^2.8.2",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
+    "faker": "^6.6.6",
     "react": "19.0.0",
     "react-dom": "^19.0.0",
     "react-native": "0.79.5",
@@ -24,7 +26,9 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
