--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-web": "^0.20.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
-    "expo-image-picker": "~16.1.4"
+    "expo-image-picker": "~16.1.4",
+    "expo-sqlite": "~15.2.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
