--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "expo-image-picker": "~16.1.4",
-    "expo-sqlite": "~15.2.14"
+    "expo-sqlite": "~15.2.14",
+    "expo-file-system": "~18.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
