--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "redux": "^5.0.1",
     "expo-image-picker": "~16.1.4",
     "expo-sqlite": "~15.2.14",
-    "expo-file-system": "~18.1.11"
+    "expo-file-system": "~18.1.11",
+    "expo-location": "~18.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
