--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "expo-image-picker": "~16.1.4",
     "expo-sqlite": "~15.2.14",
     "expo-file-system": "~18.1.11",
-    "expo-location": "~18.1.6"
+    "expo-location": "~18.1.6",
+    "expo-font": "~13.3.2",
+    "expo-splash-screen": "~0.30.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
